--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
 
     @await Html.PartialAsync("_StylesPartial")
     @await RenderSectionAsync("Styles", false)
+    @await RenderSectionAsync("TopScripts", false)
+
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
@@ -19,9 +21,8 @@
             @await Html.PartialAsync("_FooterPartial")
         </div>
     </div>
-    <!-- ./wrapper -->
     @await Html.PartialAsync("_ScriptsPartial")
   @*   @await Component.InvokeAsync("Notyf"); *@
-    @await RenderSectionAsync("Scripts", false)
+    @await RenderSectionAsync("BottomScripts", false)
 </body>
 </html>
