--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using RhythmicRealm.UI
-@using RhythmicRealm.Shared.ViewModels
+@using RhythmicRealm.Shared.ViewModels.ProductViewModels
+@using RhythmicRealm.UI.Areas.Admin.AdminViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
